added package files

--- a/Many-to-one_LSTM.ipynb
+++ b/Many-to-one_LSTM.ipynb
@@ -67,9 +67,9 @@
     "import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from deeplearning.classifiers.lstm import *\n",
-    "from deeplearning.gradient_check import eval_numerical_gradient, eval_numerical_gradient_array\n",
-    "from deeplearning.solver import Solver\n",
+    "from batchnormlstm.classifiers.lstm import *\n",
+    "from batchnormlstm.gradient_check import eval_numerical_gradient, eval_numerical_gradient_array\n",
+    "from batchnormlstm.solver import Solver\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
@@ -141,7 +141,7 @@
    "metadata": {},
    "source": [
     "# Affine layer: forward\n",
-    "In file `deeplearning/layers.py` we implement the `affine_forward` function, then test the implementaion by running the following:"
+    "In file `batchnormlstm/layers.py` we implement the `affine_forward` function, then test the implementaion by running the following:"
    ]
   },
   {
@@ -331,7 +331,7 @@
    "metadata": {},
    "source": [
     "# Batch normalization: Forward\n",
-    "In the file `deeplearning/layers.py`, we implement the batch normalization forward pass in the function `batchnorm_forward`, then run the following to test the implementation."
+    "In the file `batchnormlstm/layers.py`, we implement the batch normalization forward pass in the function `batchnorm_forward`, then run the following to test the implementation."
    ]
   },
   {
@@ -538,7 +538,7 @@
    "metadata": {},
    "source": [
     "# Dropout forward pass\n",
-    "In the file `deeplearning/layers.py`, implement the forward pass for dropout. Since dropout behaves differently during training and testing, we implement the operation for both modes.\n",
+    "In the file `batchnormlstm/layers.py`, implement the forward pass for dropout. Since dropout behaves differently during training and testing, we implement the operation for both modes.\n",
     "\n",
     "Run the cell below to test the implementation."
    ]
@@ -598,7 +598,7 @@
    "metadata": {},
    "source": [
     "# Dropout backward pass\n",
-    "In the file `deeplearning/layers.py`, implement the backward pass for dropout. Run the following cell to numerically gradient-check the implementation."
+    "In the file `batchnormlstm/layers.py`, implement the backward pass for dropout. Run the following cell to numerically gradient-check the implementation."
    ]
   },
   {
@@ -1018,7 +1018,7 @@
    "metadata": {},
    "source": [
     "# Loss layer: MSE\n",
-    "Implement the loss function in `deeplearning/layers.py`.\n",
+    "Implement the loss function in `batchnormlstm/layers.py`.\n",
     "\n",
     "We make sure that the implementations are correct by running the following:"
    ]
@@ -1060,7 +1060,7 @@
    "source": [
     "# Two-layer LSTM network\n",
     "\n",
-    "In the file `deeplearning/classifiers/lstm.py` we complete the implementation of the `TwoLayerLSTM` class. This class will serve as a model for the other networks we implement. Run the cell below to test the implementation."
+    "In the file `batchnormlstm/classifiers/lstm.py` we complete the implementation of the `TwoLayerLSTM` class. This class will serve as a model for the other networks we implement. Run the cell below to test the implementation."
    ]
   },
   {
@@ -1162,7 +1162,7 @@
     "# Solver\n",
     "In the previous assignment, the logic for training models was coupled to the models themselves. Following a more modular design, for this assignment we have split the logic for training models into a separate class.\n",
     "\n",
-    "In the file `deeplearning/solver.py`, a modular designed class is implemented to train the models. Below we test a `Solver` instance by using it to train a `TwoLayerLSTM` with the data."
+    "In the file `batchnormlstm/solver.py`, a modular designed class is implemented to train the models. Below we test a `Solver` instance by using it to train a `TwoLayerLSTM` with the data."
    ]
   },
   {
@@ -1296,7 +1296,7 @@
    "metadata": {},
    "source": [
     "# Advanced LSTM network\n",
-    "Next we implement the multi-layer LSTM network with an arbitrary number of hidden layers, and the options of batch normalization and dropout, as the `AdvancedLSTM` class in the file `deeplearning/classifiers/lstm.py`.\n",
+    "Next we implement the multi-layer LSTM network with an arbitrary number of hidden layers, and the options of batch normalization and dropout, as the `AdvancedLSTM` class in the file `batchnormlstm/classifiers/lstm.py`.\n",
     "\n",
     "ref: <br />\n",
     "https://arxiv.org/pdf/1603.09025.pdf <br />\n",
@@ -1471,7 +1471,7 @@
     "# SGD+Momentum\n",
     "Stochastic gradient descent with momentum is a widely used update rule that tends to make deep networks converge faster than vanilla stochstic gradient descent.\n",
     "\n",
-    "In the file `deeplearning/optim.py` we implement the SGD+momentum update rule in the function `sgd_momentum`, then run the following to check the implementation. We should see errors less than 1e-8."
+    "In the file `batchnormlstm/optim.py` we implement the SGD+momentum update rule in the function `sgd_momentum`, then run the following to check the implementation. We should see errors less than 1e-8."
    ]
   },
   {
@@ -1489,7 +1489,7 @@
     }
    ],
    "source": [
-    "from deeplearning.optim import sgd_momentum\n",
+    "from batchnormlstm.optim import sgd_momentum\n",
     "\n",
     "N, D = 4, 5\n",
     "w = np.linspace(-0.4, 0.6, num=N*D).reshape(N, D)\n",
@@ -1521,7 +1521,7 @@
     "# RMSProp and Adam\n",
     "RMSProp [1] and Adam [2] are update rules that set per-parameter learning rates by using a running average of the second moments of gradients.\n",
     "\n",
-    "In the file `deeplearning/optim.py`, implement the RMSProp update rule in the `rmsprop` function and implement the Adam update rule in the `adam` function, and check the implementations using the tests below.\n",
+    "In the file `batchnormlstm/optim.py`, implement the RMSProp update rule in the `rmsprop` function and implement the Adam update rule in the `adam` function, and check the implementations using the tests below.\n",
     "\n",
     "[1] Tijmen Tieleman and Geoffrey Hinton. \"Lecture 6.5-rmsprop: Divide the gradient by a running average of its recent magnitude.\" COURSERA: Neural Networks for Machine Learning 4 (2012).\n",
     "\n",
@@ -1544,7 +1544,7 @@
    ],
    "source": [
     "# Test RMSProp implementation; we should see errors less than 1e-7\n",
-    "from deeplearning.optim import rmsprop\n",
+    "from batchnormlstm.optim import rmsprop\n",
     "\n",
     "N, D = 4, 5\n",
     "w = np.linspace(-0.4, 0.6, num=N*D).reshape(N, D)\n",
@@ -1586,7 +1586,7 @@
    ],
    "source": [
     "# Test Adam implementation; we should see errors around 1e-7 or less\n",
-    "from deeplearning.optim import adam\n",
+    "from batchnormlstm.optim import adam\n",
     "\n",
     "N, D = 4, 5\n",
     "w = np.linspace(-0.4, 0.6, num=N*D).reshape(N, D)\n",
